--- a/cal.css
+++ b/cal.css
@@ -1,22 +1,30 @@
-.open-button {
-    position: fixed;
-    bottom: 22px;
-    
-    width: 290px;
+header{
+  position: fixed;
+  height: 40px;
+  width: 100%;
+  top: 0;
+  background-color: #ea543db6;
+
+}
+
+.add-button {
+  
+    top: 22px;
+    left: 10px;
+    width: 100px;
+    background-color: rgb(70, 62, 57);
+    color: #f8fafc;
    } 
 .form-popup {
     display: none;
     position: fixed;
     bottom: 0;
-   
+    background-color: #448AFF;
 }
 
 .form-container {
-
     max-width: 320px;
-
- 
-
+    display: none;
 }
  .form-container input[type=text], .form-container input[type=password] {
     width: 100%;}
@@ -26,7 +34,7 @@
   
 }
 .form-container .btn {
-    background-color: #1976D2;
+    background-color: #f8fafc;
    
     opacity: 0.7;
 }
@@ -56,8 +64,8 @@ form-container .cancel {
   
 }
 .info {
-    background-color: rgb(13, 20, 51);
-    color: azure;
+  background-color: rgb(13, 20, 51);
+  color: azure;
   padding: 15px;
   text-algin: center;
   display: none;
